--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -55,14 +55,16 @@
 }
 
 .photo-card {
-  flex-basis: calc((100% - 120px) / 4);
+  display: flex;
+  flex-direction: column;
+  flex-basis: calc((100% - 90px) / 3);
   margin-left: 30px;
   margin-top: 30px;
 }
 
 .kartinka {
   width: 100%;
-  height: 100%;
+  height: 200px;
   max-width: unset;
   object-fit: cover;
 }
