--- a/src/templates/gallery-card.hbs
+++ b/src/templates/gallery-card.hbs
@@ -1,6 +1,7 @@
 {{#each this}}
 <div class="photo-card">
-  <img src={{webformatURL}} alt={{tags}} loading="lazy" class="kartinka"/>
+    <a href={{largeImageURL}}>
+  <img src={{webformatURL}} alt={{tags}} loading="lazy" class="kartinka"/></a>
   <div class="info">
     <p class="info-item">
       <b>likes:{{likes}}</b>
@@ -15,5 +16,6 @@
       <b>Downloads:{{downloads}}</b>
     </p>
   </div>
+  </a>
 </div>
 {{/each}}
